--- a/index.html
+++ b/index.html
@@ -45,11 +45,30 @@
         <!-- Header Start -->
         <div class="container-fluid bg-dark px-0">
             <div class="row gx-0">
-                <div class="col-lg-3 bg-dark d-none d-lg-block">
-                    <a href="index.html" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                        <h1 class="m-0 text-primary text-uppercase">Polarhomes</h1>
-                    </a>
-                </div>
+<div class="col-lg-3 bg-dark d-none d-lg-block">
+    <a href="index" class="navbar-brand w-100 h-100 m-0 p-0 d-flex flex-column align-items-center justify-content-center">
+        <img src="img/logo.png" alt="Polarhomes Logo" class="logo-img">
+        <h1 class="m-0 fancy-text">PH</h1>
+    </a>
+</div>
+
+<style>
+    .logo-img {
+        width: 80px;  /* Adjust size as needed */
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .fancy-text {
+        font-size: 2.5rem;
+        font-weight: bold;
+        color: gold; /* Luxurious golden color */
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-family: "Cinzel", serif; /* A luxury-style font */
+        text-shadow: 2px 2px 8px rgba(255, 215, 0, 0.8); /* Gold glow effect */
+    }
+</style>
                 <div class="col-lg-9">
                     <div class="row gx-0 bg-white d-none d-lg-flex">
                         <div class="col-lg-7 px-5 text-start">
