--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="row gx-0">
 <div class="col-lg-3 bg-dark d-none d-lg-block">
     <a href="index" class="navbar-brand w-100 h-100 m-0 p-0 d-flex flex-column align-items-center justify-content-center">
-        <img src="img/logo.png" alt="Polarhomes Logo" class="logo-img">
+        <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
         <h1 class="m-0 fancy-text">PH</h1>
     </a>
 </div>
