--- a/index.html
+++ b/index.html
@@ -75,42 +75,42 @@
                 </div>
             </div>
 
-            <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
-                <a href="index" class="navbar-brand d-block d-lg-none">
-                    <h1 class="m-0 text-primary text-uppercase">Polarhomes</h1>
-                </a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
-                    <div class="navbar-nav py-0">
-                        <a href="index" class="nav-item nav-link active">Home</a>
-                        <a href="about" class="nav-item nav-link">About</a>
-                        <a href="service" class="nav-item nav-link">Services</a>
-                        <a href="room" class="nav-item nav-link">Rooms</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu rounded-0 m-0">
-                                <a href="booking" class="dropdown-item">Booking</a>
-                                <a href="team" class="dropdown-item">Our Team</a>
-                                <a href="testimonial" class="dropdown-item">Testimonial</a>
-                            </div>
-                        </div>
-                        <a href="contact" class="nav-item nav-link">Contact</a>
-                    </div>
+          <!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
+    <!-- Mobile & Tablet Logo (Hidden on large screens) -->
+    <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
+        <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
+        <h1 class="m-0 fancy-text ms-2">PH</h1>
+    </a>
+
+    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+        <div class="navbar-nav py-0">
+            <a href="index" class="nav-item nav-link active">Home</a>
+            <a href="about" class="nav-item nav-link">About</a>
+            <a href="service" class="nav-item nav-link">Services</a>
+            <a href="room" class="nav-item nav-link">Rooms</a>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                <div class="dropdown-menu rounded-0 m-0">
+                    <a href="booking" class="dropdown-item">Booking</a>
+                    <a href="team" class="dropdown-item">Our Team</a>
+                    <a href="testimonial" class="dropdown-item">Testimonial</a>
                 </div>
-            </nav>
+            </div>
+            <a href="contact" class="nav-item nav-link">Contact</a>
         </div>
     </div>
-</div>
-<!-- Header End -->
+</nav>
 
 <!-- Styles -->
 <style>
-    .logo-img {
-        width: 60px;  /* Adjust size as needed */
-        height: auto;
+        .logo-img {
+        width: 70px; /* Adjust size as needed */
+        height: 70px;
     }
 
     .fancy-text {
@@ -119,12 +119,15 @@
         color: gold; /* Luxurious golden color */
         text-transform: uppercase;
         letter-spacing: 2px;
-        font-family: "Cinzel", serif; /* A luxury-style font */
-        text-shadow: 2px 2px 8px rgba(255, 215, 0, 0.8); /* Gold glow effect */
+        font-family: "Cinzel", serif;
+        text-shadow: 2px 2px 8px rgba(255, 215, 0, 0.8);
     }
 </style>
 
-
+        </div>
+    </div>
+</div>
+<!-- Header End -->
 
        <!-- Carousel Start -->
 <div class="container-fluid p-0 mb-5">
