--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 <div class="bg-primary rounded p-4 text-center">
                     <!-- Logo Image -->
                     <a href="index.html">
-                        <img src="img/logo.png" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
+                        <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
                     </a>
                     <!-- PH Shortform Below Logo -->
                     <p class="text-white text-uppercase mb-0">PH</p>
