--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@
 <!-- About End -->
 
 
-        <!-- Team Start -->
+        <!-- Team Start 
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -355,7 +355,7 @@
                 </div>
             </div>
         </div>
-        <!-- Team End -->
+        Team End -->
 
 
         <!-- Newsletter Start -->
