--- a/index.html
+++ b/index.html
@@ -232,8 +232,13 @@
             <div class="col-lg-6">
                 <h6 class="section-title text-start text-primary text-uppercase">About Us</h6>
                 <h1 class="mb-4">Discover <span class="text-primary text-uppercase">Unforgettable Stays</span></h1>
-                <p class="mb-4">Experience comfort, luxury, and adventure all in one place. Whether you're looking for a cozy getaway, a beachfront retreat, or a city escape, we offer a curated selection of stunning accommodations designed to make your stay truly special.</p>
-                <div class="row g-3 pb-4">
+               <p class="mb-4">
+                    Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
+                    Nestled along the Expressway in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
+                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
+                    curated selection of premium accommodations tailored to your needs.
+                </p>
+		    <div class="row g-3 pb-4">
                     <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
                         <div class="border rounded p-1">
                             <div class="border rounded text-center p-4">
