--- a/index.html
+++ b/index.html
@@ -129,29 +129,51 @@
 </div>
 <!-- Header End -->
 
-       <!-- Carousel Start -->
+<!-- Carousel Start -->
 <div class="container-fluid p-0 mb-5">
     <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="carousel-image" src="img/carousel-1.jpg" alt="Image">
+                <img class="carousel-image" src="img/carousel-1.jpg" alt="Luxurious Stay">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 700px;">
-                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Luxury Living</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Discover A Brand Luxurious Hotel</h1>
-                        <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Rooms</a>
-                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book A Room</a>
+                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Luxury Stays</h6>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Experience Comfort at PolarHomes</h1>
+                        <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Listings</a>
+                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book Now</a>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="carousel-image" src="img/carousel-2.jpg" alt="Image">
+                <img class="carousel-image" src="img/carousel-2.jpg" alt="Scenic Views">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 700px;">
-                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Luxury Living</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Discover A Brand Luxurious Hotel</h1>
-                        <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Rooms</a>
-                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book A Room</a>
+                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Scenic Locations</h6>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Stay Near Nairobi’s Best Attractions</h1>
+                        <a href="location" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Explore Location</a>
+                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Reserve Your Stay</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-image" src="img/carousel-3.jpg" alt="Cozy Interiors">
+                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                    <div class="p-3" style="max-width: 700px;">
+                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Elegant Interiors</h6>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Enjoy a Stylish and Cozy Experience</h1>
+                        <a href="gallery" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Gallery</a>
+                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book Your Stay</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="carousel-image" src="img/carousel-4.jpg" alt="Modern Amenities">
+                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                    <div class="p-3" style="max-width: 700px;">
+                        <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Premium Comfort</h6>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Modern Amenities for a Perfect Stay</h1>
+                        <a href="amenities" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Amenities</a>
+                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Check Availability</a>
                     </div>
                 </div>
             </div>
@@ -169,7 +191,6 @@
     </div>
 </div>
 <!-- Carousel End -->
-
 <style>
     .carousel-image {
         width: 100%;
