--- a/about.html
+++ b/about.html
@@ -241,16 +241,16 @@
             <div class="col-lg-6">
                 <div class="row g-3">
                     <div class="col-6 text-end">
-                        <img class="img-fluid rounded wow zoomIn about-image-1" data-wow-delay="0.1s" src="img/about-1.jpg" style="margin-top: 25%;">
+                        <img class="img-fluid rounded wow zoomIn about-image-1" data-wow-delay="0.1s" src="img/about-image-1.jpg" style="margin-top: 25%;">
                     </div>
                     <div class="col-6 text-start">
-                        <img class="img-fluid rounded wow zoomIn about-image-2" data-wow-delay="0.3s" src="img/about-2.jpg">
+                        <img class="img-fluid rounded wow zoomIn about-image-2" data-wow-delay="0.3s" src="img/about-image-2.jpg">
                     </div>
                     <div class="col-6 text-end">
-                        <img class="img-fluid rounded wow zoomIn about-image-3" data-wow-delay="0.5s" src="img/about-3.jpg">
+                        <img class="img-fluid rounded wow zoomIn about-image-3" data-wow-delay="0.5s" src="img/about-image-3.jpg">
                     </div>
                     <div class="col-6 text-start">
-                        <img class="img-fluid rounded wow zoomIn about-image-4" data-wow-delay="0.7s" src="img/about-4.jpg">
+                        <img class="img-fluid rounded wow zoomIn about-image-4" data-wow-delay="0.7s" src="img/about-image-4.jpg">
                     </div>
                 </div>
             </div>
