--- a/index.html
+++ b/index.html
@@ -634,15 +634,15 @@
     <div class="container pb-5">
         <div class="row g-5">
             <div class="col-md-6 col-lg-4">
-                <div class="bg-primary rounded p-4 text-center">
+                
                     <!-- Logo Image -->
-                    <a href="index.html">
+                    <a href="index">
                         <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
                     </a>
                     <!-- PH Shortform Below Logo -->
                     <p class="text-white text-uppercase mb-0">PH</p>
                     <p class="text-white">+012 345 67890</p>
-                </div>
+               
             </div>
             <div class="col-md-6 col-lg-3">
                 <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
