--- a/index.html
+++ b/index.html
@@ -641,7 +641,12 @@
                     </a>
                     <!-- PH Shortform Below Logo -->
                     <p class="text-white text-uppercase mb-0">PH</p>
-                    <p class="text-white">+012 345 67890</p>
+                                   <p class="mb-4">
+                    Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
+                    Nestled along the Expressway in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
+                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
+                    curated selection of premium accommodations tailored to your needs.
+                </p>
                
             </div>
             <div class="col-md-6 col-lg-3">
