--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
 		    <img class="img-fluid rounded wow zoomIn about-image-2" data-wow-delay="0.3s" src="img/about-image-2.jpg">
 		</div>
 		<div class="col-6 text-end">
-		    <img class="img-fluid rounded wow zoomIn about-image-3" data-wow-delay="0.5s" src="about-image-3.jpg">
+		    <img class="img-fluid rounded wow zoomIn about-image-3" data-wow-delay="0.5s" src="img/about-image-3.jpg">
 		</div>
 		<div class="col-6 text-start">
-		    <img class="img-fluid rounded wow zoomIn about-image-4" data-wow-delay="0.7s" src="about-image-4.jpg">
+		    <img class="img-fluid rounded wow zoomIn about-image-4" data-wow-delay="0.7s" src="img/about-image-4.jpg">
 		</div>
                 </div>
             </div>
