--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
                     <p class="text-white text-uppercase mb-0">PH</p>
                                    <p class="mb-4">
                     Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
-                    Nestled along the Expressway in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
-                    Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
+                    we offer a seamless blend of comfort, convenience, and adventure.
+                    we provide a 
                     curated selection of premium accommodations tailored to your needs.
                 </p>
                
