--- a/index.html
+++ b/index.html
@@ -639,13 +639,8 @@
                     <a href="index">
                         <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
                     </a>
-                    <!-- PH Shortform Below Logo -->
-                    <p class="text-white text-uppercase mb-0">PH</p>
-                                   <p class="mb-4">
+                <p class="mb-4">
                     Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
-                    we offer a seamless blend of comfort, convenience, and adventure.
-                    we provide a 
-                    curated selection of premium accommodations tailored to your needs.
                 </p>
                
             </div>
@@ -684,10 +679,8 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
-                        <a href="">Home</a>
-                        <a href="">Cookies</a>
-                        <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="index">Home</a>
+                        <a href="contact">Help</a>
                     </div>
                 </div>
             </div>
