--- a/booking.html
+++ b/booking.html
@@ -299,15 +299,15 @@
     <div class="container pb-5">
         <div class="row g-5">
             <div class="col-md-6 col-lg-4">
-                <div class="bg-primary rounded p-4 text-center">
+                
                     <!-- Logo Image -->
-                    <a href="index.html">
+                    <a href="index">
                         <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
                     </a>
-                    <!-- PH Shortform Below Logo -->
-                    <p class="text-white text-uppercase mb-0">PH</p>
-                    <p class="text-white">+012 345 67890</p>
-                </div>
+                <p class="mb-4">
+                    Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
+                </p>
+               
             </div>
             <div class="col-md-6 col-lg-3">
                 <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
@@ -344,10 +344,8 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
-                        <a href="">Home</a>
-                        <a href="">Cookies</a>
-                        <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="index">Home</a>
+                        <a href="contact">Help</a>
                     </div>
                 </div>
             </div>
@@ -355,7 +353,6 @@
     </div>
 </div>
 <!-- Footer End -->
-
 
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
