--- a/room.html
+++ b/room.html
@@ -122,6 +122,12 @@
         font-family: "Cinzel", serif;
         text-shadow: 2px 2px 8px rgba(255, 215, 0, 0.8);
     }
+	.room-item img {
+    width: 100%;
+    height: 200px; /* Set the height */
+    object-fit: cover; /* Ensure the image scales properly */
+}
+
 </style>
 
         </div>
