--- a/room-details.html
+++ b/room-details.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || contact Polarhomes </title>
+    <title>Polarhomes || room details </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -148,12 +148,55 @@
         <!-- Page Header End -->
     <script src="room-details.js" defer></script>
 </head>
+<style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+    }
+    .carousel-inner img {
+      height: 500px;
+      object-fit: cover;
+    }
+    .features i {
+      color: #ff6600;
+    }
+  </style>
+</head>
 <body>
-    <div class="container py-5">
-        <h2 id="room-title" class="text-primary text-uppercase"></h2>
-        <div id="room-carousel"></div>
-        <p id="room-description" class="mt-4"></p>
+  <div class="container py-5">
+    <h2 id="room-title" class="text-center text-uppercase fw-bold mb-4 text-primary"></h2>
+
+    <div id="roomCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+      <div class="carousel-inner" id="carousel-images"></div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#roomCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#roomCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
+
+    <p id="room-description" class="lead text-muted"></p>
+
+    <div class="row features mt-5">
+      <div class="col-md-4 mb-3">
+        <i class="fa fa-bed me-2"></i><span id="room-beds"></span>
+      </div>
+      <div class="col-md-4 mb-3">
+        <i class="fa fa-bath me-2"></i><span id="room-baths"></span>
+      </div>
+      <div class="col-md-4 mb-3">
+        <i class="fa fa-wifi me-2"></i><span id="room-wifi"></span>
+      </div>
+    </div>
+
+    <div class="text-center mt-5">
+      <a href="/booking" class="btn btn-lg btn-dark px-5">Book This Room</a>
+    </div>
+  </div>
+
 <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s">
     <div class="container pb-5">
@@ -221,6 +264,7 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
