--- a/room-details.html
+++ b/room-details.html
@@ -80,7 +80,7 @@
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2">PH</h1>
+        <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
