--- a/index.html
+++ b/index.html
@@ -632,9 +632,8 @@
         </div>
  Newsletter Start -->
         
-
 <!-- Footer Start -->
-<div class="container-fluid bg-dark text-light footer wow fadeIn pt-4 pb-2" data-wow-delay="0.1s">
+<div class="container-fluid bg-dark text-light footer wow fadeIn pt-4 pb-2 mt-5" data-wow-delay="0.1s">
     <div class="container">
         <div class="row g-4">
             <!-- Logo and About -->
@@ -690,6 +689,7 @@
     </div>
 </div>
 <!-- Footer End -->
+
 
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
